# praise_pads

./: CMakeLists.txt  README.md  audiocontroller.cpp  audiocontroller.h  main.cpp  main.qml  main.qrc
.github/workflows/: android.yml  wasm.yml
android/: AndroidManifest.xml
